<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerbackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/nameLayout"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextview"
            android:textColor="@color/luckypoint"
            android:text="@string/nametexteng"
            android:textSize="20dp"

            />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/Black"
            android:hint="@string/examplename"
            android:textSize="20dp"


            />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:layout_below="@id/nameLayout"
    android:id="@+id/emailLayout1"
    android:layout_marginLeft="38dp"
    android:layout_marginRight="10dp"
    >
    <TextView
        android:id="@+id/emailtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailtexteng"
        android:textColor="@color/luckypoint"
        android:textSize="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/emailEditText"
        android:textColor="@color/Black"
        android:hint="@string/exampleemail"
        android:textSize="20dp"

        />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:id="@+id/emailLayout2"
    android:orientation="horizontal"
    android:layout_below="@id/emailLayout1"
    android:layout_marginLeft="38dp"
    android:layout_marginRight="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailtextview2"
        android:text="@string/emailtextretryeng"
        android:textColor="@color/luckypoint"
        android:textSize="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/emailEditText2"
        android:textSize="20dp"
        android:textColor="@color/Black"
        android:hint="@string/exampleemail"


        />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/passlayout1"
        android:orientation="horizontal"
        android:layout_below="@id/emailLayout2"
        android:layout_marginRight="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTextview"
            android:textSize="20dp"
            android:textColor="@color/luckypoint"
            android:text="@string/passwordtexteng"


            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/passwordEditText"
            android:textSize="20dp"
            android:textColor="@color/Black"
            android:inputType="textPassword"
            android:hint="@string/examplepassword"


            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/passlayout2"
        android:orientation="horizontal"
        android:layout_below="@id/passlayout1"
        android:layout_marginRight="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordtext2"
            android:text="@string/passwordtexteng"
            android:textColor="@color/luckypoint"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/passwordEditText2"
            android:textColor="@color/Black"
            android:inputType="textPassword"
            android:hint="@string/examplepassword"
            android:textSize="20dp"
            />

    </LinearLayout>
    <Button
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passlayout2"
       android:id="@+id/registerbtn"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/luckypoint"
        android:text="Register"

        android:textColor="#ffff"
        android:textSize="20dp" />

</RelativeLayout>